[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/scripts/cristais.gd" type="Script" id=1]
[ext_resource path="res://sprites/Songs/Picked Coin Echo.wav" type="AudioStream" id=2]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0849057, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.711111, 0.856354 )
colors = PoolColorArray( 1, 0, 0.294118, 0, 0.988235, 0.196078, 0.0666667, 0.580392 )

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/cristais.png-bb3647a623b0305739c2ba764689ec71.stex"

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="cristais" type="Node2D"]
script = ExtResource( 1 )

[node name="trail" type="Line2D" parent="."]
width_curve = SubResource( 2 )
default_color = Color( 1, 0.792157, 0.0784314, 1 )
gradient = SubResource( 3 )
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 2

[node name="cristal" type="Sprite" parent="."]
z_index = 3
texture = SubResource( 4 )
hframes = 3

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="shape" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[node name="cristal2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
